[package]
name = "rstg-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
grammers-client = "=0.7.0"
grammers-session = "=0.7.0"
grammers-tl-types = "=0.7.0"
tokio = { version = "1", features = ["full"] }
